--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,18 +1,28 @@
 .header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .typing-effect {
-	font-family: monospace;
-	font-size: 16px;
-	white-space: pre-wrap;
-  }
-  
-  .cursor {
-	display: inline-block;
-	width: 2px;
-	background-color: black;
-	animation: blink 1s step-start infinite;
-  }
+  font-family: monospace;
+  font-size: 16px;
+  white-space: pre-wrap;
+}
+
+.cursor {
+  display: inline-block;
+  width: 2px;
+  background-color: black;
+  animation: blink 1s step-start infinite;
+}
+
+.loading-indicator {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.loading-text {
+  margin-top: 23px;
+}
