--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,3 +47,11 @@
   width: 400x;
   height: 200px;
 }
+
+.chat {
+  border: 1px solid grey;
+  overflow-y: scroll;
+  max-height: 600px;
+  padding: 20px;
+  border-radius: 5px;
+}
